2001-08-07  H.J. Lu  <hjl@gnu.org>

	* readelf.c (process_file): Return 0 if OK, otherwise return 1.
	(main): Return process_file ().

2001-08-05  Philip Blundell  <philb@gnu.org>

	* doc/binutils.texi: Use "Thumb" not "THUMB".

2001-08-03  John Healy  <jhealy@redhat.com>

        Patch suggested by Frank Eigler <fche@redhat.com>.
        * objdump.c (disassemble_data): Fill in section member of the
        disasm_info structure.

2001-08-03  Tom Walsh  <tom@cyberiansoftware.com>

	* configure.in: Added --with-windres option.
	* configure: Regenerated.

2001-07-11  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* doc/binutils.texi: Use @command{name} for commands;
	use @option{-opt} for options; use @table @env for list of options;
	remove spaces arround [ | ] in synopsis.

	* doc/Makefile.am (POD2MAN): Use 'GNU Development Tools' for the
	center title.

2001-07-31  Nick Clifton  <nickc@cambridge.redhat.com>

        * objcopy.c: Fix formatting.
        (section_rename): New structure.
        (OPTION_RENAME_SECTION): New switch.
        (copy_usage): Document new switch.
        (add_section_rename): New function: Add a node to the section
        rename list.
        (find_section_rename): New function: Find the new name and
        flags for a section.
        (setup_section): Call find_section_name to determine the name
        of the output section.
        (copy_main): Handle OPTION_RENAME_SECTION.
        * binutils.texi: Document new switch.
	* NEWS: Mention new switch.

2001-07-30  Nick Clifton  <nickc@cambridge.redhat.com>

	* README: Rename bug-gnu-utils@gcc.org to bug-binutils@gcc.org.
	* MAINTAINERS: Rename bug-gnu-utils@gcc.org to
	bug-binutils@gcc.org.

2001-07-28  Matthias Kramm  <kramm@quiss.org>

	* bucomm.c (list_supported_architectures): New function.
	* bucomm.h (list_supported_architectures): Declare.
	* objdump.c (usage): Call the above.

2001-07-25  Dave Brolley  <brolley@redhat.com>
