@@ -1,3 +1,9 @@
+2001-08-08  Alexandre Oliva  <aoliva@redhat.com>
+
+	* readelf.c (display_debug_info): Add to abbrev_offset the addend
+	of any RELA relocation for the abbrev_offset memory location that
+	refers to the .debug_abbrev section symbol.
+
 2001-08-07  H.J. Lu  <hjl@gnu.org>
 
 	* readelf.c (process_file): Return 0 if OK, otherwise return 1.
